[package]
name = "passport_scrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
reqwest = "0.11.11"
scraper = "0.13.0"
notify-rust = "4.5.8"

